Fix mobile nav spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,10 @@ nav li {
   margin-left: 15px;
 }
 
+nav li:nth-child(1) {
+  margin-left: 0px;
+}
+
 h1 {
   font-size: 1.55rem;
   margin: 0px;
